--- a/.github/workflows/main_mmt-ai-news.yml
+++ b/.github/workflows/main_mmt-ai-news.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - mmt-ai-news
 
 on:
@@ -27,6 +24,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      - name: List files in publish directory
+        run: ls -R ${{env.DOTNET_ROOT}}/myapp
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -45,6 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: ./myapp
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -52,5 +53,5 @@ jobs:
         with:
           app-name: 'mmt-ai-news'
           slot-name: 'Production'
-          package: ${{ runner.workspace }}/.net-app
+          package: ./myapp
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D6E831BBB47B40C1BD6F392CB4A950C5 }}
